--- a/packages/components/src/components/notice/bal-snackbar/bal-snackbar.sass
+++ b/packages/components/src/components/notice/bal-snackbar/bal-snackbar.sass
@@ -17,3 +17,4 @@
     justify-content: start
   +element(close)
     +alert-close
+    top: 1.3rem
