--- a/packages/components/src/components/notice/bal-toast/bal-toast.sass
+++ b/packages/components/src/components/notice/bal-toast/bal-toast.sass
@@ -14,4 +14,4 @@
   +element(close)
     +alert-close
     top: 50%
-    margin-top: -.75rem
+    margin-top: -.9rem
