--- a/packages/components/src/styles/mixins/alert.mixin.sass
+++ b/packages/components/src/styles/mixins/alert.mixin.sass
@@ -35,5 +35,3 @@
   position: absolute
   right: 1rem
   top: 1rem
-  width: 1.5rem
-  height: 1.5rem
